<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/proc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/micr"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/camerra"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/camerra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/photo"
        app:layout_constraintStart_toEndOf="@id/proc"
        app:layout_constraintEnd_toStartOf="@id/ram"
        app:layout_constraintTop_toTopOf="@id/proc"
        />

    <ImageView
        android:id="@+id/ram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ssd"
        app:layout_constraintStart_toEndOf="@id/camerra"
        app:layout_constraintEnd_toStartOf="@id/ssd"
        app:layout_constraintTop_toTopOf="@id/proc"
        />

    <ImageView
        android:id="@+id/ssd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ssd"
        app:layout_constraintStart_toEndOf="@id/ram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/proc"
        />

    <TextView
        android:id="@+id/proc_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exynos_990"
        android:fontFamily="@font/markpro"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/prod_dtls_color"
        app:layout_constraintTop_toBottomOf="@id/proc"
        app:layout_constraintStart_toStartOf="@id/proc"
        app:layout_constraintEnd_toEndOf="@id/proc"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/camera_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/prod_dtls_color"
        android:text="@string/_108_12_mp"
        app:layout_constraintTop_toTopOf="@id/proc_descr"
        app:layout_constraintStart_toStartOf="@id/camerra"
        app:layout_constraintEnd_toEndOf="@id/camerra"
        />

    <TextView
        android:id="@+id/ram_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8_gb"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/prod_dtls_color"
        app:layout_constraintTop_toBottomOf="@id/ram"
        app:layout_constraintStart_toStartOf="@id/ram"
        app:layout_constraintTop_toTopOf="@id/proc_descr"
        app:layout_constraintEnd_toEndOf="@id/ram"
        />

    <TextView
        android:id="@+id/ssd_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_256_gb"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/prod_dtls_color"
        app:layout_constraintTop_toBottomOf="@id/ssd"
        app:layout_constraintStart_toStartOf="@id/ssd"
        app:layout_constraintTop_toTopOf="@id/proc_descr"
        app:layout_constraintEnd_toEndOf="@id/ssd"
        />

    <TextView
        android:id="@+id/select_copacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_color_and_capacity"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:fontFamily="@font/mark_pro"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/proc_descr"
        app:layout_constraintStart_toStartOf="@id/proc_descr"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/prod_color_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/select_copacity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/prod_sdd_recycler"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/producr_colors_recycler_item"
        android:layout_marginTop="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/prod_sdd_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/prod_color_recycler"
        app:layout_constraintStart_toEndOf="@id/prod_color_recycler"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/prdct_ssd_recycler_item"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toCartBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/prod_color_recycler"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/done_btn_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/add_to_cartT"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/mark_pro_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            />

        <TextView
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/add_to_cart"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/mark_pro_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    
</androidx.constraintlayout.widget.ConstraintLayout>