<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_marginHorizontal="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/hotsales_recycleritem_background">

        <ImageView
            android:id="@+id/newImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/resource_new"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginStart="30dp"
            />

        <TextView
            android:id="@+id/phone_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:text="@string/iphone_12"
            android:fontFamily="@font/mark_pro_bold"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/phone_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/super_fast_cool"
            android:fontFamily="@font/markpro"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/phone_model"
            app:layout_constraintStart_toStartOf="@id/phone_model"
            app:layout_constraintEnd_toEndOf="@id/phone_model"
            android:layout_marginTop="5dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buy_btn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/buy_now"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:fontFamily="@font/markpro"
            android:textStyle="bold"
            android:background="@drawable/buy_btn_background"
            app:layout_constraintTop_toBottomOf="@id/phone_description"
            app:layout_constraintStart_toStartOf="@id/phone_model"
            app:layout_constraintEnd_toEndOf="@id/phone_model"
            android:layout_marginTop="30dp"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="210dp"
            android:layout_height="0dp"
            android:src="@drawable/hotsalesexample"
            app:layout_constraintStart_toEndOf="@id/phone_model"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>